# EasySend

./: .gitignore  package-lock.json  package.json
.github/workflows/: desktop-bundles.yml  desktop-release.yml
desktop-client/: .env.example  index.html  package.json  tailwind.config.ts  vite.config.ts
desktop-client/src/: main.tsx  styles.css
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/icons/: icon.icns
desktop-client/src-tauri/src/: main.rs
desktop-client/src/api/: auth.ts  client.ts  items.ts  uploads.ts
desktop-client/src/db/: sqlite.ts
desktop-client/src/lib/: device-name.ts
desktop-client/src/routes/: App.tsx
desktop-client/src/store/: session.ts
server-admin/: .env.example  drizzle.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
server-admin/drizzle/: 0000_flowery_ronan.sql
server-admin/drizzle/meta/: 0000_snapshot.json  _journal.json
server-admin/src/: proxy.ts
server-admin/src/app/: globals.css  layout.tsx  page.tsx
server-admin/src/app/(public)/login/: page.tsx
server-admin/src/app/(public)/register/: page.tsx
server-admin/src/app/admin/login/: page.tsx
server-admin/src/app/admin/users/: page.tsx
server-admin/src/app/api/items/: route.ts
server-admin/src/db/: schema.ts
server-admin/src/lib/: bootstrap.ts  db.ts  env.ts
server-admin/src/lib/admin/: index.ts
server-admin/src/lib/auth/: index.ts
server-admin/src/lib/http/: index.ts
server-admin/src/lib/items/: index.ts
server-admin/src/lib/policy/: index.ts
server-admin/src/lib/validation/: index.ts
(+19 files in other folders)
