[package]
name = "vercelsend-desktop"
version = "0.1.0"
description = "Desktop client for VercelSend"
authors = ["leeperfect"]
edition = "2021"

[lib]
name = "vercelsend_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
